# huggingface-env

./: .env  .env.example  Makefile  README.md  buildspec.yaml  dockerfile  pyproject.toml
scripts/: generate_diagrams.py
src/project/config/: __init__.py  settings.py
