# Example configuration for Black.

# NOTE: you have to use single-quoted strings in TOML for regular expressions.
# It's the equivalent of r-strings in Python.  Multiline strings are treated as
# verbose regular expressions by Black.  Use [ ] to denote a significant space
# character.

[tool.black]
line-length = 119
target-version = ['py36', 'py37', 'py38']
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''[project]
name = "huggingface-env"
version = "0.1.0"
description = "A ready-to-run Hugging Face environment for macOS (M4/M-series)"
requires-python = ">=3.10"

dependencies = [
    "transformers>=4.45.0",
    "datasets>=3.0.0",
    "huggingface_hub[cli]>=0.25.0",
    "accelerate>=1.0.0",
    "torch>=2.5.0",
    "safetensors>=0.4.5",
    "sentencepiece",
    "evaluate",
    "scikit-learn",
    "numpy",
    "pandas",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.1.0",
    "mypy>=1.7.0",
]

docs = [
    "weasyprint>=60.0",
    "markdown>=3.5",
]

[tool.uv]
# keep lockfile out of VCS
exclude = ["*.pyc", "__pycache__", ".DS_Store"]
